vke-seoul/ns-dodam-io/mastodon/20-sidekiq.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq
  namespace: dodam-io
  labels:
    app: sidekiq
spec:
  selector:
    matchLabels:
      app: sidekiq
  template:
    metadata:
      labels:
        app: sidekiq
    spec:
      containers:
        - image: tootsuite/mastodon:v4.0.2
          name: sidekiq
          command: ["bash"]
          args: ["-c", "bundle exec sidekiq"]
          resources:
            requests:
              memory: 1024Mi
              cpu: 500m
            limits:
              memory: 1024Mi
              cpu: 1000m
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: sidekiq
