vke-seoul/ns-dodam-io/mastodon/30-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: dodam-io
  labels:
    app: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: dodam-io
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: tootsuite/mastodon:v4.0.2
          name: web
          command: ["bash"]
          args: ["-c", "bundle exec rails s -p 3000"]
          resources:
            requests:
              memory: 368Mi
              cpu: 200m
            limits:
              memory: 1024Mi
              cpu: 2000m
          ports:
            - containerPort: 3000
              name: web-port
          startupProbe:
            httpGet:
              path: /health
              port: web-port
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: web-port
            failureThreshold: 2
            periodSeconds: 60
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: web
