vke-seoul/ns-dodam-io/mastodon/31-streaming.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: streaming
  namespace: dodam-io
  labels:
    app: streaming
spec:
  type: NodePort
  selector:
    app: streaming
  ports:
    - port: 4000
      targetPort: 4000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming
  namespace: dodam-io
  labels:
    app: streaming
spec:
  selector:
    matchLabels:
      app: streaming
  template:
    metadata:
      labels:
        app: streaming
    spec:
      containers:
        - image: tootsuite/mastodon:v4.0.2
          name: streaming
          command: ["node"]
          args: ["./streaming"]
          resources:
            requests:
              memory: 128Mi
              cpu: 200m
            limits:
              memory: 128Mi
              cpu: 1000m
          ports:
            - containerPort: 4000
              name: streaming-port
          startupProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: streaming-port
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: streaming-port
            failureThreshold: 2
            periodSeconds: 60
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: streaming
