vke-seoul/ns-dodam-io/mastodon/40-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: dodam-io
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - dodam.io
      secretName: dodam-io-certs
  rules:
    - host: dodam.io
      http:
        paths:
          - path: /api/v1/streaming
            pathType: Prefix
            backend:
              service:
                name: streaming
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000

---
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: web-staging
  namespace: dodam-io
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - staging.dodam.io
      secretName: dodam-io-certs
  rules:
    - host: staging.dodam.io 
      http:
        paths:
          - path: /api/v1/streaming
            pathType: Prefix
            backend:
              service:
                name: streaming
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-staging
                port:
                  number: 3000

---
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: old-mstdn-redirection
  namespace: dodam-io
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/permanent-redirect: https://dodam.io
    nginx.ingress.kubernetes.io/permanent-redirect-code: '301'
spec:
  tls:
    - hosts:
        - mstdn.dhlyn.me
      secretName: old-mstdn-certs
  rules:
    - host: mstdn.dhlyn.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
